# sandbox-api

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
.claude/: settings.json
.claude/scripts/: check-deprecated.sh
.github/workflows/: ci.yml  deploy.yml  infra.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_create_domain_schema.py  0002_seed_demo_users.py  0003_indexes_baseline.py  0004_nullable_optional_fks.py  0005_drop_trailer_number_unique.py
app/src/: config.py  db.py  logging.py  main.py  middleware.py
app/src/admin/: router.py
app/src/auth/: dependencies.py  router.py  schemas.py  security.py  seed.py  service.py
app/src/drivers/: router.py  schemas.py  service.py
app/src/loads/: router.py  schemas.py  service.py
app/src/models/: __init__.py  customers.py  drivers.py  events.py  facilities.py  fuel.py  incidents.py  loads.py  maintenance.py  metrics.py  routes.py  trailers.py  trips.py  trucks.py  users.py
app/src/reports/: router.py  schemas.py  service.py
app/src/routes/: health.py
app/src/scripts/: seed_csv.py
app/src/trips/: router.py  schemas.py  service.py
app/tests/: conftest.py  test_health.py
app/tests/auth/: test_login.py  test_security.py
app/tests/models/: test_user_model.py
app/tests/reports/: test_fleet_utilization.py
app/tests/trips/: test_trip_detail.py
deploy/: docker-compose.prod.yml  nginx.Dockerfile  nginx.conf
docs/: spec.md
docs/rules/: code_rules.md
docs/workshop/: 01-claude-code-setup.md  02-hooks-in-practice.md
infra/: README.md  backend.tf  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
perf/: README.md  stress_trip_search.py
perf/bodies/: trip_search_heavy.py  (+1 more)
(+2 files in other folders)
