[project]
name = "sandbox-api"
version = "0.1.0"
description = "Baseline API for an AI workshop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",  # passlib breaks against bcrypt>=4.0 (missing __about__ attribute)
    "python-jose[cryptography]>=3.3.0",
    "typer>=0.12",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiohttp>=3.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
